--- a/dev.html
+++ b/dev.html
@@ -6,13 +6,22 @@
     <link rel="icon" type="image/png" href="https://depay.fi/favicon.png"/>
     <title>Development</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
+    <script crossorigin src="https://unpkg.com/depay-crypto-wallets@2/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-blockchain-constants@1/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-blockchain-client@2/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-blockchain-token@1/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-blockchain-transaction@1/dist/umd/index.js"></script>
     <script src="dist/umd/index.js"></script>
   </head>
   <body>
     <div class="container">
-
-      
-
+      <div class="row pt-5">
+        <div class="col">
+          <h1>DePay Decentralized Exchanges</h1>
+          <p>Open the browser inspector and try: `Exchange.route`</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
