--- a/dev.html
+++ b/dev.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
     <script crossorigin src="https://unpkg.com/depay-crypto-wallets@2/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-blockchain-constants@1/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-blockchain-client@2/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-blockchain-token@1/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-blockchain-transaction@1/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-constants@1/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-client@2/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-tokens@1/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-transaction@1/dist/umd/index.js"></script>
     <script src="dist/umd/index.js"></script>
   </head>
   <body>
