--- a/dev.html
+++ b/dev.html
@@ -7,11 +7,12 @@
     <title>Development</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
-    <script crossorigin src="https://unpkg.com/depay-crypto-wallets@2/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-constants@1/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-client@2/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-tokens@1/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-transaction@1/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-blockchains@2/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-wallets@3/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-constants@2/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-client@3/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-tokens@2/dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-transaction@2/dist/umd/index.js"></script>
     <script src="dist/umd/index.js"></script>
   </head>
   <body>
@@ -19,7 +20,7 @@
       <div class="row pt-5">
         <div class="col">
           <h1>DePay Decentralized Exchanges</h1>
-          <p>Open the browser inspector and try: `Exchange.route`</p>
+          <p>Open the browser inspector and try: `Web3Exchanges.route`</p>
         </div>
       </div>
     </div>
