--- a/dev.html
+++ b/dev.html
@@ -12,8 +12,8 @@
     <script crossorigin src="https://unpkg.com/depay-web3-wallets@5/dist/umd/index.js"></script>
     <script crossorigin src="https://unpkg.com/depay-web3-constants@3/dist/umd/index.js"></script>
     <script crossorigin src="https://unpkg.com/depay-web3-client@6/dist/umd/index.js"></script>
-    <script crossorigin src="https://unpkg.com/depay-web3-tokens@6/dist/umd/index.js"></script>
-    <script src="dist/umd/index.js"></script>
+    <script crossorigin src="https://unpkg.com/depay-web3-tokens@7/dist/umd/index.js"></script>
+    <script src="tmp/index.dev.js"></script>
   </head>
   <body>
     <div class="container">
