--- a/dev.html
+++ b/dev.html
@@ -13,6 +13,7 @@
     <script crossorigin src="https://unpkg.com/@depay/web3-constants@6"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-client@9"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-tokens@9"></script>
+    <script crossorigin src="https://unpkg.com/@depay/web3-wallets@12"></script>
     <script src="tmp/index.dev.js"></script>
   </head>
   <body>
