--- a/dev.html
+++ b/dev.html
@@ -13,6 +13,8 @@
     <script crossorigin src="https://unpkg.com/@depay/walletconnect-v1@1"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-client@10"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-tokens@10"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@depay/walletconnect-v1@1"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@depay/walletconnect-v2@2"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-wallets@15"></script>
     <script src="tmp/index.dev.js"></script>
   </head>
