--- a/dev.html
+++ b/dev.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="https://depay.com/favicon.png"/>
     <title>Development</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js" type="application/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.1/ethers.umd.min.js" type="application/javascript"></script>
     <script crossorigin src="https://unpkg.com/decimal.js@10"></script>
     <script crossorigin src="https://unpkg.com/@depay/solana-web3.js@1"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@9"></script>
