--- a/dev.html
+++ b/dev.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.1/ethers.umd.min.js" type="application/javascript"></script>
     <script crossorigin src="https://unpkg.com/decimal.js@10"></script>
-    <script crossorigin src="https://unpkg.com/@depay/solana-web3.js@1"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@depay/solana-web3.js@1/dist/umd/index.js"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-blockchains@9"></script>
-    <script crossorigin src="https://unpkg.com/@depay/web3-client@10"></script>
-    <script crossorigin src="https://unpkg.com/@depay/web3-tokens@10"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@depay/web3-client@10/dist/umd/index.js"></script>
+    <script crossorigin src="https://cdn.jsdelivr.net/npm/@depay/web3-tokens@10/dist/umd/index.js"></script>
     <script crossorigin src="https://cdn.jsdelivr.net/npm/@depay/walletconnect-v2@2"></script>
     <script crossorigin src="https://unpkg.com/@depay/web3-wallets@17"></script>
     <script src="tmp/index.dev.js"></script>
